--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,28 +1,19 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title> Blank </ion-title>
+    <ion-buttons slot="secondary">
+      <ion-button (click)="logout()">
+        <ion-icon slot="start" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title size="large">NetPark </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large"
-        >Blank <button (click)="logout()">logout</button></ion-title
-      >
-    </ion-toolbar>
-  </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>
-      Start with Ionic
-      <a
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://ionicframework.com/docs/components"
-        >UI Components</a
-      >
-    </p>
+    <strong>Bem vindo ao NetPark</strong>
+    <ion-button [routerLink]="['/extract']" color="primary">
+      Vá Para tela de Extrato!
+    </ion-button>
   </div>
 </ion-content>
