--- a/src/app/components/extract/extract.component.scss
+++ b/src/app/components/extract/extract.component.scss
@@ -13,4 +13,18 @@
 
 .card-extract--header--location {
   display: flex;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.card-extract--value {
+  font-weight: 600;
+}
+
+.card-extract--container-date {
+  margin-top: 10px;
+}
+
+.card-extract--date {
+  font-weight: 600;
 }
