--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,10 +1,5 @@
 ion-content {
-  --background: linear-gradient(
-    180deg,
-    rgba(0, 251, 226, 1) 0%,
-    rgba(0, 251, 226, 1) 46%,
-    rgba(0, 251, 226, 0.5130427170868348) 100%
-  );
+  --background: linear-gradient(180deg, #1f3779 0%, #80d0c7 100%);
 }
 
 .card-login {
