--- a/src/app/components/extract/extract.component.scss
+++ b/src/app/components/extract/extract.component.scss
@@ -28,3 +28,11 @@
 .card-extract--date {
   font-weight: 600;
 }
+
+.container-buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
